<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.AddFTP">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/domainName"
        android:id="@+id/tv_domainName"
        android:layout_alignBottom="@+id/et_domainName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:id="@+id/tv_userName"
        android:layout_alignBottom="@+id/et_userName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/tv_Password"
        android:layout_alignBottom="@+id/et_password"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_domainName"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tv_userName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_userName"
        android:hint="@string/anonymous"
        android:layout_below="@+id/tv_port"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tv_port" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_below="@+id/tv_userName"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tv_userName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_OK"
        android:id="@+id/btn_OK"
        android:layout_marginBottom="74dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/et_password"
        android:layout_marginEnd="62dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_Cancel"
        android:id="@+id/btn_Cancel"
        android:layout_alignTop="@+id/btn_OK"
        android:layout_alignStart="@+id/et_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="端口号"
        android:id="@+id/tv_port"
        android:layout_alignBottom="@+id/et_port"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/et_port"
        android:layout_below="@+id/et_domainName"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tv_port" />

</RelativeLayout>
